<resources>
    <string name="app_name">CleanArchitectureMovieApi</string>
    <string name="series">Series</string>
    <string name="movie">Movie</string>
    <string name="home">Home</string>
    <string name="want_to_advertisement">Want to advertisement</string>
    <string name="contact_09795014119"><![CDATA[contact=> 09795014119]]></string>
    <string name="top_rating">Top Rating Movie</string>
    <string name="top_drama">Top Rating Drama</string>
    <string name="overview">Overview</string>
    <string name="watch_now">Watch Now</string>
    <string name="_18">Joke</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">Download</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="similar_result">Similar Result</string>
</resources>