<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".presentation.ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/detail_movie_cover"
            android:layout_width="wrap_content"
            android:layout_height="245dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/gradient_bg"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_cover"
            app:layout_constraintEnd_toEndOf="@+id/detail_movie_cover"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detail_movie_cover"
            app:layout_constraintVertical_bias="0.0" />

        <!--   <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/slide_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/gradient_bg" />-->

        <ImageView
            android:id="@+id/detail_movie_img"
            android:layout_width="125dp"
            android:layout_height="175dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:scaleType="centerCrop"
            android:transitionName="sharedName"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_cover"
            app:srcCompat="@drawable/ic_baseline_home_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_star_rating"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            app:layout_constraintStart_toStartOf="@+id/detail_movie_img"
            app:layout_constraintTop_toTopOf="@+id/detail_movie_img">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_star"
                app:tint="#FFFFFF" />

            <TextView
                android:id="@+id/detail_textStarRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/detail_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:textSize="18sp"
            android:text="TextView"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_movie_img"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_cover" />

        <TextView
            android:id="@+id/detail_movie_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_movie_img"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_title" />

        <TextView
            android:id="@+id/detail_movie_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingExtra="8dp"
            android:textSize="18sp"
            android:text="My Test"
            android:textColor="@color/text_light_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_img" />

        <LinearLayout
            android:id="@+id/layout_wd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_desc">

            <TextView
                android:id="@+id/movie_watch"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/background_star_rating"
                android:gravity="center"
                android:paddingStart="20dp"
                android:text="@string/watch_now"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_cinema" />

            <TextView
                android:id="@+id/movie_downLoad"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/background_star_rating"
                android:gravity="center"
                android:paddingStart="20dp"
                android:text="Download"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_arrow_downward_24" />

            <TextView
                android:id="@+id/txt_display_epi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Episodes"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_epi_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clipToPadding="false"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_wd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/similar_result"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_similar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:clipToPadding="false"
                tools:listitem="@layout/item" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>